--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.1.0"
+    "cypress": "^13.1.0",
+    "typescript": "^5.2.2"
   }
 }
