--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^13.1.0",
+    "pdf-parse": "^1.1.1",
     "typescript": "^5.2.2"
   }
 }
